crates/zizmor/tests/integration/snapshots/integration__snapshot__cant_retrieve.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().expects_failure(true).offline(true).unsetenv(\"GH_TOKEN\").args([\"pypa/sampleproject\"]).run()?"
---
fatal: no audit was performed
can't fetch remote repository: pypa/sampleproject
