crates/zizmor/tests/integration/snapshots/integration__snapshot__cant_retrieve_no_gh_token.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().expects_failure(true).offline(false).unsetenv(\"GH_TOKEN\").args([\"pypa/sampleproject\"]).run()?"
---
fatal: no audit was performed
error: can't fetch remote repository: pypa/sampleproject
  |
  = help: set a GitHub token with --gh-token or GH_TOKEN
