crates/zizmor/tests/integration/snapshots/integration__snapshot__cant_retrieve_offline.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().expects_failure(true).offline(true).unsetenv(\"GH_TOKEN\").args([\"pypa/sampleproject\"]).run()?"
---
🌈 zizmor v@@VERSION@@
fatal: no audit was performed
error: can't fetch remote repository: pypa/sampleproject
  |
  = help: remove --offline to audit remote repositories

Caused by:
    can't fetch remote repository: pypa/sampleproject
