crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-10.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 663
expression: "zizmor().input(input_under_test(\"excessive-permissions/issue-472-repro.yml\")).run()?"
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:20:3
   |
20 | /   job2:
21 | |     name: job2
22 | |     # normal permissions finding here, since callers are always
23 | |     # responsible for setting permissions, even if the workflow
24 | |     # is reusable-only
25 | |     uses: ./.github/workflows/fake.yml
   | |                                       ^
   | |                                       |
   | |_______________________________________this job
   |                                         default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

5 findings (4 suppressed): 0 informational, 0 low, 1 medium, 0 high
