crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-11.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 671
expression: "zizmor().input(input_under_test(\"excessive-permissions/reusable-workflow-call.yml\")).run()?"
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:7:3
   |
 7 | /   job1:
 8 | |     name: job1
 9 | |     # finding: reusable jobs should always specify their permissions
10 | |     uses: ./.github/workflows/zizmor-child.yml
   | |                                               ^
   | |                                               |
   | |_______________________________________________this job
   |                                                 default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

2 findings (1 suppressed): 0 informational, 0 low, 1 medium, 0 high
