crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 606
expression: "zizmor().input(input_under_test(\"excessive-permissions/workflow-default-perms.yml\")).args([\"--pedantic\"]).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:5:1
   |
 5 | / on: push
 6 | |
 7 | | name: workflow-default-perms
...  |
19 | |         with:
20 | |           persist-credentials: false
   | |_____________________________________^ default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:14:3
   |
14 | /   single:
15 | |     name: single
16 | |     runs-on: ubuntu-latest
17 | |     steps:
18 | |       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
19 | |         with:
20 | |           persist-credentials: false
   | |                                     ^
   | |                                     |
   | |_____________________________________this job
   |                                       default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

2 findings: 0 informational, 0 low, 2 medium, 0 high
