crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-5.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 623
expression: "zizmor().input(input_under_test(\"excessive-permissions/workflow-write-all.yml\")).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:5:1
  |
5 | permissions: write-all
  | ^^^^^^^^^^^^^^^^^^^^^^ uses write-all permissions
  |
  = note: audit confidence → High

3 findings (2 suppressed): 0 informational, 0 low, 0 medium, 1 high
