crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-6.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 631
expression: "zizmor().input(input_under_test(\"excessive-permissions/workflow-empty-perms.yml\")).run()?"
---
No findings to report. Good job! (2 suppressed)
