crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-9.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 655
expression: "zizmor().input(input_under_test(\"excessive-permissions/workflow-default-perms-all-jobs-explicit.yml\")).run()?"
---
No findings to report. Good job! (6 suppressed)
