crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 589
expression: "zizmor().input(input_under_test(\"excessive-permissions/issue-336-repro.yml\")).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
No findings to report. Good job! (1 suppressed)
